# AstroBot

./: .env-example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 08318e924938_initial_migrations.py  3d7628a77782_initial_migrations.py  b88c4c7cf78b_initial_migrations.py
docker/: app.sh
src/tg_bot/: bot_.py  config.py  logger.py  main.py  utils.py
src/tg_bot/alembic/: env.py
src/tg_bot/database/: db.py  tg_bot.db
src/tg_bot/database/predictions/: admin.py  models.py  service.py
src/tg_bot/database/profile/: admin.py  models.py  service.py
src/tg_bot/database/user/: admin.py  models.py  service.py
src/tg_bot/filters/: access.py  chat_type.py
src/tg_bot/gpt/: gpt.py  template.py
src/tg_bot/gpt/templates/en/: event_template.txt  horoscope_template.txt
src/tg_bot/gpt/templates/ru/: event_template.txt  horoscope_template.txt
src/tg_bot/handlers/: __init__.py  basic.py  events.py  general.py  horoscope.py  profile.py  register.py  subscription.py  test.py
src/tg_bot/handlers/background/: mailing.py  prediction.py  subscription.py
src/tg_bot/keyboards/inline/: basic.py  callback.py  events.py  horoscope.py  profile.py  subscription.py  survey.py
src/tg_bot/keyboards/reply/: basic.py  common.py  profile.py  test.py
src/tg_bot/locales/: translation.py
src/tg_bot/locales/en/LC_MESSAGES/: messages.po
src/tg_bot/locales/ru/LC_MESSAGES/: messages.po
src/tg_bot/middleware/: __init__.py  cancelation.py  locale.py
src/tg_bot/mini_apps/templates/: profile.html
src/tg_bot/server/: admin_auth.py  main.py
src/tg_bot/states/: horoscope.py  profile.py  register.py  test.py
src/tg_bot/tests/: conftest.py  mocked_bot.py  utils.py
src/tg_bot/tests/bot/: test_basic.py  test_survey.py
